Fix margin to stop other elements shifting

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -716,9 +716,9 @@ p code {
 
 /* Accordion */
 .accordion {
-	display: flex;
-	flex-direction: column;
-	margin: 2rem 0;
+    display: flex;
+    flex-direction: column;
+    margin: 0 0 2rem 0;
 }
 
 .accordion-button::before {
